--- a/Assignemnt_Data_Toolkit.ipynb
+++ b/Assignemnt_Data_Toolkit.ipynb
@@ -315,7 +315,7 @@
         "\n",
         "With **hierarchical indexing**, you can group by **year first, then city**, making it easy to find or compare data.  \n",
         "\n",
-        "Hierarchical indexing makes **data more organized, easier to search, and better for analysis**, especially when working with large datasets. 🚀\n",
+        "Hierarchical indexing makes **data more organized, easier to search, and better for analysis**, especially when working with large datasets.\n",
         "\n",
         "---"
       ],
@@ -416,7 +416,7 @@
         "- The **science scores** are mostly close together (low variation).  \n",
         "- The **lowest math score is 78**, so someone might need extra help.  \n",
         "\n",
-        "The `describe()` function is a **fast and easy way** to get a **big-picture view** of your data without doing calculations yourself! 🚀\n",
+        "The `describe()` function is a **fast and easy way** to get a **big-picture view** of your data without doing calculations yourself!\n",
         "\n",
         "---"
       ],
@@ -589,7 +589,7 @@
         "show(p)  \n",
         "```\n",
         "This creates a **live, interactive chart** where you can **hover over points, zoom in, and explore the data**.  \n",
-        "Bokeh is a **powerful tool for creating interactive charts and dashboards**. It is easy to use and great for **data analysis, finance, and reports**! 🚀\n",
+        "Bokeh is a **powerful tool for creating interactive charts and dashboards**. It is easy to use and great for **data analysis, finance, and reports**!\n",
         "\n",
         "---"
       ],
